--- a/Bayesian Optimization/Exp1_Bayesian_Optimization.ipynb
+++ b/Bayesian Optimization/Exp1_Bayesian_Optimization.ipynb
@@ -375,6 +375,10 @@
         "from bayesian_optimization_util import plot_approximation, plot_acquisition\n",
         "\n",
         "\n",
+        "import random\n"
+        "torch.manual_seed(12)\n"
+        "np.random.seed(12)\n"
+        "random.seed(12)\n"
         "\n",
         "# Gaussian process with Matérn kernel as surrogate model\n",
         "#define a schedule for the Matern kernel. Generally nu = 3/2 and 5/2\n",
